# vr-foraging-analysis

./: LICENSE.md  README.md  demo.ipynb  demo_graph.ipynb  pyproject.toml  sessions.csv  sessions.yaml
src/: dataset.py  models.py  processing.py  visualization.py
src/ssvr/: dataset.py  enrich_trials.py  models.py  processing.py  qc.py  s3_utils.py  utils.py
src/ssvr/analysis/: block_switching_behavior.py  logistic_regression.py
src/ssvr/visualization/: __init__.py
