[build-system]
requires = ["uv_build>=0.8.22"]
build-backend = "uv_build"

[project]
name = "ssvr"
version = "0.1.0"
description = "Single-site VR Foraging Analysis"
authors = [ {name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org"}]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "aind-behavior-vr-foraging",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "aind-behavior-vr-foraging[data]",
    "pydantic",
    "ruff",
    "tqdm>=4.67.1",
]


[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }
